# Beebots

./: Abeebot.py  Scuids.py  back1.py  cog_hz1.py  keep_alive.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  scuids.py
.codesandbox/: tasks.json
cog/: Code.py  Cog_main.py  Token.py  addemojirole.py  characters.py  cog_hz1.py  commands.py  cvks.py  events.py  gem.py  help.py  hoyo.py  info.py  login.py  loichao.py  lonin.py  mesage.py  music.py  ping.py  scuid.py  scuids.py  voice.py
templates/: index.html  users.db  voice_channels.db
