[tool.poetry]
name = "repl_nix_EnkaNetworkpy"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.5.0"
pydantic = "^1.10.7"
requests = "^2.28.2"
typing-extensions = "^4.5.0"
aiohttp = "^3.8.4"
cachetools = "^5.3.0"
Flask = "^2.2.3"
ffmpeg = "^1.4"
gTTS = "^2.3.1"
PyNaCl = "1.5.0"
pytz = "^2023.3"
discord = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
